# rusty-assets

./: .env.example  .gitignore  .mpc.json  BOURSOBANK_SETUP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml  run_tui.ps1  sample_payslip.csv  tarpaulin.toml  test_card_transactions.csv  test_duplicate_bank.csv  test_duplicate_payslip.csv  test_qt_salary.csv
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-fast.yml  ci-full.yml  test-simple.yml  test.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v20-05-25.pkl
crates/assets-api/: Cargo.toml
crates/assets-api/src/: main.rs  routes.rs
crates/assets-api/src/handlers/: health.rs  mod.rs  reports.rs
crates/assets-cli/: Cargo.toml
crates/assets-cli/src/: date_utils.rs  main.rs  utils.rs
crates/assets-cli/src/commands/: accounts.rs  db.rs  demo.rs  duplicates.rs  import.rs  mod.rs  prices.rs  reports.rs  transactions.rs  users.rs
crates/assets-cli/src/commands/reports/: account_ledger.rs  balance_sheet.rs  cash_flow.rs  income_statement.rs
crates/assets-core/: Cargo.toml
crates/assets-core/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_categories_table.down.sql  000003_users_table.down.sql  000004_account_ownership.down.sql  000005_price_history.up.sql  000006_balance_views.down.sql  000006_balance_views.up.sql  000007_reporting_views.down.sql  000007_reporting_views.up.sql  000008_balance_sheet_function.up.sql  000010_optimize_balance_sheet.down.sql  000011_income_statement_function.down.sql  000011_income_statement_function.up.sql  000012_income_statement_full_path.up.sql  000015_transaction_deduplication.up.sql  000016_fix_duplicate_detection_dates.down.sql  000016_fix_duplicate_detection_dates.up.sql  000017_file_import_tracking.down.sql  000017_file_import_tracking.up.sql  0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_categories_table.up.sql  0003_users_table.up.sql  0004_account_ownership.up.sql  0005_price_history.down.sql  0007_reporting_views.down.sql  0007_reporting_views.up.sql  0008_balance_sheet_function.down.sql  0009_account_full_path.down.sql  0009_account_full_path.up.sql  0010_optimize_balance_sheet.up.sql  0012_income_statement_full_path.down.sql  0013_account_ledger_function.down.sql  0013_account_ledger_function.up.sql  0014_cash_flow_statement_function.down.sql  0014_cash_flow_statement_function.up.sql  0015_transaction_deduplication.down.sql  0016_duplicate_transaction_hiding_simple.down.sql  0016_duplicate_transaction_hiding_simple.up.sql  (+55 more)
crates/assets-core/src/: database.rs  error.rs  lib.rs  models.rs  sample_data.rs  services.rs  test_utils.rs
crates/assets-core/src/database/: tests.rs
crates/assets-core/src/importers/: boursobank.rs  generic_payslip.rs  mathworks_payslip.rs  mod.rs  payslip_traits.rs  qt_payslip.rs  societegenerale.rs  traits.rs
crates/assets-core/src/importers/mathworks_payslip/: tests.rs
crates/assets-core/src/importers/qt_payslip/: tests.rs
crates/assets-core/src/importers/societegenerale/: tests.rs
crates/assets-core/src/models/: mod.rs
crates/assets-core/src/models/account/: context.rs  core.rs  enhanced.rs  mod.rs  ownership.rs  types.rs
crates/assets-core/src/models/import/: core.rs  mod.rs
crates/assets-core/src/models/pricing/: core.rs  mod.rs
crates/assets-core/src/models/reports/: cash_flow.rs  income_statement.rs  ledger.rs  mod.rs
crates/assets-core/src/models/transaction/: builders.rs  core.rs  enhanced.rs  mod.rs
crates/assets-core/src/models/user/: core.rs  mod.rs
crates/assets-core/src/services/: account_service.rs  deduplication_service.rs  file_import_service.rs  import_service.rs  mod.rs  ownership_service.rs  payslip_import_service.rs  price_history_service.rs  report_service.rs  transaction_service.rs  user_service.rs
crates/assets-core/src/services/account_service/: tests.rs
crates/assets-core/src/services/transaction_service/: tests.rs
crates/assets-core/src/services/user_service/: tests.rs
crates/assets-core/src/tests/: utils.rs
crates/assets-core/src/validation/: account_validator.rs  errors.rs  mod.rs  tests.rs
crates/assets-demo/: Cargo.toml
crates/assets-demo/src/: lib.rs  sample_data.rs
crates/assets-demo/src/sample_data/: basic_household.rs  mod.rs
crates/assets-tauri/: Cargo.toml  INSTALL.md  README.md  STATUS.md  build-ui.sh  start-dev.sh  tauri.conf.json
crates/assets-tauri/crates/assets-tauri/ui/: package.json
crates/assets-tauri/icons/: README.md
crates/assets-tauri/src/: lib.rs  main.rs
crates/assets-tauri/ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/assets-tauri/ui/src/lib/components/: AccountCard.svelte  BalanceChart.svelte  Dashboard.svelte
crates/assets-tauri/ui/src/routes/: +page.svelte
crates/assets-tui/: Cargo.toml  README.md
crates/assets-tui/src/: component.rs  components.rs  database.rs  lib.rs  main.rs  tui.rs  ui.rs
crates/assets-tui/src/components/: account_form.rs  accounts.rs  reports.rs  settings.rs  transactions.rs
docs/: account-validation-plan.md  path-based-api-design.md  tauri-mcp-integration.md
tasks/: done.md  todo.md
