[workspace]
resolver = "3"
members = ["crates/assets-core", "crates/assets-cli", "crates/assets-demo", "crates/assets-tauri"]
default-members = ["crates/assets-cli", "crates/assets-core"]
[workspace.package]
edition = "2021"

[workspace.lints.clippy]
# Deny all clippy warnings (strict mode)
all = "deny"
