[package]
name = "assets-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
assets-core = { path = "../assets-core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rust_decimal = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
