[package]
name = "assets-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
demo = ["dep:assets-demo"]

[dependencies]
assets-core = { path = "../assets-core" }
assets-demo = { path = "../assets-demo", optional = true }

tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rust_decimal = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = [
    "v4",
    "serde",
] } # Added serde feature for Uuid
dotenv = "0.15"
serde_json = "1.0"
comfy-table = "0.1" # Added comfy-table
csv = "1.1" # Added csv
env_logger = "0.11" # Added env_logger for logging

[lints]
workspace = true
