[package]
name = "assets-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "rust_decimal",
] }
tokio = { version = "1.0", features = ["full"] }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
