[package]
name = "assets-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "rust_decimal",
] }
tokio = { version = "1.0", features = ["full"] }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1.88"
csv = "1.3.1"
encoding_rs = "0.8"
regex = "1.10"
dotenv = "0.15"
futures = "0.3.31"
log = { version = "0.4" }
bon = { version = "3.6" }
pdf-extract = "0.9.0"

[dev-dependencies]
env_logger = "0.11"
# Testing infrastructure
testcontainers = { version = "0.24", features = ["blocking"] }
testcontainers-modules = { version = "0.12", features = ["postgres"] }
tempfile = "3.0"
tokio-test = "0.4"

[lints]
workspace = true
