[package]
name = "assets-tui"
version = "0.1.0"
edition.workspace = true

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
anyhow = "1.0.75"
tokio = { version = "1", features = ["full"] }
assets-core = { path = "../assets-core" }
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
rust_decimal = "1.32.0"
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
